# one_max_ga

./: .gitignore  README.md  pyproject.toml
notebooks/: from_scratch.ipynb  mlrose.ipynb
