[tool.poetry]
name = "one-max-ga"
version = "0.1.0"
description = ""
authors = ["Guilherme Prado <guizmk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
ipykernel = "^6.29.4"
numpy = "^1.26.4"
mlrose = {git = "https://github.com/gkhayes/mlrose.git"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
